tests/fixtures/invalid/const_inline_enum_assignment.c
int main(void) {
    const enum { LOCKED = 3 } value = LOCKED;
    value = 4;
    return value;
}
